examples/test/testpolicy2228.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2228
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key47: value18
      key37: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value35
      podSelector:
        matchLabels:
          key23: value45
          key38: value22
